--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.5.6",
+    "ky": "^1.0.1",
+    "material-icons": "^1.13.11",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
