--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev  --host",
+    "start": "astro dev  --host",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --host",
     "astro": "astro"
   },
   "dependencies": {
@@ -15,9 +15,11 @@
     "@types/react-dom": "^18.2.4",
     "astro": "^2.5.6",
     "ky": "^1.0.1",
+    "lodash": "^4.17.21",
     "material-icons": "^1.13.11",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1"
   }
 }
